--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -18,3 +18,26 @@ collectionFS
 cfs-public-folder
 blaze-layout
 marked
+cfs-filesystem
+cfs-base-package
+cfs-file
+cfs-collection
+cfs-collection-filters
+cfs-access-point
+cfs-worker
+cfs-upload-http
+cfs-storage-adapter
+cfs-filesaver
+http-methods
+data-man
+cfs-upload-ddp
+http-publish
+cfs-gridfs
+cfs-tempstore
+power-queue
+reactive-list
+cfs-graphicsmagick
+cfs-ejson-file
+reactive-property
+micro-queue
+iron-router-progress
